--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,6 @@ target_link_libraries (wavquant sndfile)
 
 add_executable (wavcmp wavcmp)
 target_link_libraries (wavcmp sndfile)
+
+add_executable (wavcb wavcb.cpp)
+target_link_libraries (wavcb sndfile)
