--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 SET (CMAKE_BUILD_TYPE "Release")
 #SET (CMAKE_BUILD_TYPE "Debug")
 
-SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -I/usr/local/include -L/opt/local/lib -std=c++17")
+SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wall -Wextra -I/usr/local/include -L/opt/local/lib -std=c++17")
 SET (CMAKE_CXX_FLAGS_RELEASE "-O3")
 SET (CMAKE_CXX_FLAGS_DEBUG "-g3 -fsanitize=address")
 
