--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -24,3 +24,6 @@ target_link_libraries (wavcmp sndfile)
 
 add_executable (wavcb wavcb.cpp)
 target_link_libraries (wavcb sndfile)
+
+add_executable (wavfind wavfind.cpp)
+target_link_libraries (wavfind sndfile)
